--- a/process_scope/process_scope/templates/process_level3_percentage.html
+++ b/process_scope/process_scope/templates/process_level3_percentage.html
@@ -5,10 +5,11 @@
 {% block content %}
 
 <center>
-    <h1>Process Level 3 Percentage</h1>
+    <h1>Process Completion Percentage per Country</h1>
 </center>
 
 <form method="get" action="{% url 'process_level3_percentage' %}">
+
     <label for="region">Select a Region:</label>
     <select name="region" id="region">
         <option value="">--Select Region--</option>
@@ -24,6 +25,10 @@
         {% for cluster in clusters %}
         <option value="{{ cluster }}" {% if cluster == selected_cluster %}selected{% endif %}>{{ cluster }}</option>
         {% endfor %}
+        {% else %}
+        {% for cluster in clusters %}
+        <option value="{{ cluster }}">{{ cluster }}</option>
+        {% endfor %}
         {% endif %}
     </select>
 
@@ -36,11 +41,16 @@
             {{ country.country_description }}
         </option>
         {% endfor %}
+        {% else %}
+        {% for country in countries %}
+        <option value="{{ country.country_description }}">{{ country.country_description }}</option>
+        {% endfor %}
         {% endif %}
     </select>
 
     <button type="submit">Submit</button>
 </form>
+
 
 <h2>By Country</h2>
 <table>
