--- a/process_scope/process_scope/templates/process_comp_per_country.html
+++ b/process_scope/process_scope/templates/process_comp_per_country.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <center>
- <h1>Process Comp Percentage per Country</h1>
+ <h1>Process Completion Percentage per Country</h1>
  <h2>Welcome to my first program created using Django !!!</h2>
 </center>
 
