--- a/process_scope/process_scope/templates/region_page.html
+++ b/process_scope/process_scope/templates/region_page.html
@@ -3,8 +3,8 @@
 {% block title %}Process Level 3 Percentage{% endblock %}
 
 {% block content %}
+<h2>Region Data</h2>
 
-<h2>ProcessValue Data</h2>
 
 <table>
   <thead>
@@ -12,7 +12,6 @@
       <th>Region</th>
       <th>Cluster</th>
       <th>Country</th>
-
     </tr>
   </thead>
   <tbody>
@@ -21,28 +20,12 @@
       <td>{{ region_value.region }}</td>
       <td>{{ region_value.cluster }}</td>
       <td>{{ region_value.country_description }}</td>
-
     </tr>
     {% endfor %}
   </tbody>
 </table>
 
-<div id="bar_chart"></div>
 
-<script>
-// Example data
-var countries = ["Country A", "Country B", "Country C"];
-var harmonizationPercentages = [60, 70, 80]; // Example values
 
-// Create the bar chart
-var barChart = tfvis.render.barChart(
-    {values: harmonizationPercentages},
-    {xAxisDomain: countries, width: 800, height: 400},
-    {zoomToFit: true}
-);
-
-// Display the bar chart
-document.getElementById('bar_chart').appendChild(barChart);
-</script>
 
 {% endblock %}
