--- a/process_scope/process_scope/templates/process_level3_percentage.html
+++ b/process_scope/process_scope/templates/process_level3_percentage.html
@@ -9,7 +9,6 @@
 </center>
 
 <form method="get" action="{% url 'process_level3_percentage' %}">
-
     <label for="region">Select a Region:</label>
     <select name="region" id="region">
         <option value="">--Select Region--</option>
@@ -51,6 +50,9 @@
     <button type="submit">Submit</button>
 </form>
 
+<center>
+<img src="data:image/png;base64,{{ chart_base64 }}" alt="Process Completion Percentage per Country Chart" />
+</center>
 
 <h2>By Country</h2>
 <table>
@@ -73,5 +75,56 @@
     {% endfor %}
   </tbody>
 </table>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const regions = JSON.parse('{{ regions|escapejs }}');
+        const clusters = JSON.parse('{{ clusters|escapejs }}');
+        const countries = JSON.parse('{{ countries|escapejs }}');
+
+        const regionSelect = document.getElementById('region');
+        const clusterSelect = document.getElementById('cluster');
+        const countrySelect = document.getElementById('country');
+
+        regionSelect.addEventListener('change', function() {
+            const selectedRegion = this.value;
+            filterClusters(selectedRegion);
+            filterCountries(selectedRegion, clusterSelect.value);
+        });
+
+        clusterSelect.addEventListener('change', function() {
+            const selectedCluster = this.value;
+            filterCountries(regionSelect.value, selectedCluster);
+        });
+
+        function filterClusters(region) {
+            clusterSelect.innerHTML = '<option value="">--Select Cluster--</option>';
+            const filteredClusters = clusters.filter(cluster => cluster.region === region);
+            const uniqueClusters = [...new Set(filteredClusters.map(cluster => cluster.cluster))];
+            uniqueClusters.forEach(clusterName => {
+                const option = document.createElement('option');
+                option.value = clusterName;
+                option.textContent = clusterName;
+                clusterSelect.appendChild(option);
+            });
+            clusterSelect.disabled = !uniqueClusters.length;
+        }
+
+        function filterCountries(region, cluster) {
+            countrySelect.innerHTML = '<option value="">--Select Country--</option>';
+            const filteredCountries = countries.filter(country =>
+                (!region || country.region === region) &&
+                (!cluster || country.cluster === cluster)
+            );
+            filteredCountries.forEach(country => {
+                const option = document.createElement('option');
+                option.value = country.country_description;
+                option.textContent = country.country_description;
+                countrySelect.appendChild(option);
+            });
+            countrySelect.disabled = !filteredCountries.length;
+        }
+    });
+</script>
 
 {% endblock %}
