--- a/process_scope/process_scope/templates/procesvalue_page.html
+++ b/process_scope/process_scope/templates/procesvalue_page.html
@@ -18,6 +18,7 @@
       <th>Standard/Local</th>
       <th>Country</th>
       <th>Value</th>
+      <th>Action</th>
     </tr>
   </thead>
   <tbody>
@@ -32,27 +33,12 @@
       <td>{{ process_value.process_taxonomy.standard_local }}</td>
       <td>{{ process_value.country.country_description }}</td>
       <td>{{ process_value.value }}</td>
+      <td>
+        <a href="{% url 'edit_process_value' process_value.id %}">Edit</a>
+      </td>
     </tr>
     {% endfor %}
   </tbody>
 </table>
-
-<div id="bar_chart"></div>
-
-<script>
-// Example data
-var countries = ["Country A", "Country B", "Country C"];
-var harmonizationPercentages = [60, 70, 80];a // Example values
-
-// Create the bar chart
-var barChart = tfvis.render.barChart(
-    {values: harmonizationPercentages},
-    {xAxisDomain: countries, width: 800, height: 400},
-    {zoomToFit: true}
-);
-
-// Display the bar chart
-document.getElementById('bar_chart').appendChild(barChart);
-</script>
 
 {% endblock %}
