--- a/process_scope/process_scope/templates/region_page.html
+++ b/process_scope/process_scope/templates/region_page.html
@@ -1,17 +1,18 @@
 {% extends 'base.html' %}
 
-{% block title %}Process Level 3 Percentage{% endblock %}
+{% block title %}Region Data{% endblock %}
 
 {% block content %}
+<center>
 <h2>Region Data</h2>
-
-
+</center>
 <table>
   <thead>
     <tr>
       <th>Region</th>
       <th>Cluster</th>
       <th>Country</th>
+      <th>Action</th>
     </tr>
   </thead>
   <tbody>
@@ -20,12 +21,16 @@
       <td>{{ region_value.region }}</td>
       <td>{{ region_value.cluster }}</td>
       <td>{{ region_value.country_description }}</td>
+      <td>
+        <a href="{% url 'edit_region' region_value.id %}">Edit</a>
+      </td>
     </tr>
     {% endfor %}
   </tbody>
 </table>
 
-
-
+<div style="text-align: center; margin-top: 20px;">
+  <a href="{% url 'add_region' %}" style="background-color: #00677F; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Add New Record</a>
+</div>
 
 {% endblock %}
